--- a/src/main/jnlp/template.vm
+++ b/src/main/jnlp/template.vm
@@ -7,25 +7,15 @@
         <description>pdf-jrasterizer</description>
         <description kind="short">pdf-jrasterizer</description>
         <homepage href=""/>
-
         <offline-allowed/>
     </information>
   <security>
-    <all-permissions></all-permissions>
+    <all-permissions/>
   </security>
 
     <resources>
         <j2se version="1.6+" java-vm-args="-Xmx1024M"/>
-        <!--
-        
-        <jar href="pdf-renderer-1.6.2.jar" />
-        <jar href="pdf-jrasterizer-0.0.1-SNAPSHOT.jar" main="true" download="eager"/>
-        -->
         $dependencies
 	</resources>
-	<application-desc main-class="$mainClass">
-    <!--
-    <application-desc main-class="net.niconomicon.jrasterizer.PDFRasterizerGUI">-->
-        <!--argument>-noThumb</argument-->
-    </application-desc>
+	<application-desc main-class="$mainClass"/>
 </jnlp>
